my_manifests/my_manifests/network_policies/deny-ingress-othernamespaces.yaml
# Deny all traffic from other namespaces
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: secondary
  name: deny-from-other-namespaces
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
